# automata-trade-executor

./: README.md  setup.cfg
simulation/trade/: TradeConductorSimulator.py  __init__.py
tests/trade/serialize/: test_serializer_test.py  test_trade_deserializer.py
trade/: TradeConductor.py
trade/executor/: TradeExecutor.py
trade/serialize/: trade_deserializer.py  trade_serializer.py
