[metadata]
name = automata.trade.executor
version = 0.0.2
description = Automata Trade Executor
license = UNLICENSE

[options]
packages = find:
install_requires =
    automata.core==0.0.4
    automata.utilities>=0.0.3
    automata.redis==0.0.2

[options.packages.find]
include = trade*
exclude =
    tests
    simulations
